# MorningEdge

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: daily.yml  tests.yml
.streamlit/: config.toml
data/: STATUS.md
scripts/: GENERATE_BRIEF.PY  backfill_embeddings.py  cluster_narratives.py  enrich_sample.py  fetch_once.py  query_db.py  route_sample.py  run_pipeline.py  score_sample.py
src/morningedge/: __init__.py  config.py  taxonomy.py
src/morningedge/aggregation/: __init__.py  clustering.py  scoring.py  themes.py
src/morningedge/dashboard/: __init__.py  app.py  bootstrap.py  queries.py  styling.py  views.py
src/morningedge/delivery/: __init__.py  brief.py  chat.py
src/morningedge/enrichment/: __init__.py  entities.py  events.py  router.py  sentiment.py
src/morningedge/ingestion/: __init__.py  dedup.py  models.py  rss.py  sources.py
src/morningedge/llm/: __init__.py  gemini.py  prompts.py
src/morningedge/storage/: __init__.py  db.py  schema.py
tests/: test_clustering.py  test_dedup.py  test_enrichment.py  test_models.py  test_router.py  test_rss.py  test_sentiment.py  test_storage.py  test_taxonomy.py
